# seed_lerobot

./: .gitignore  README.md
ledog_ros2_ws/: README.md
ledog_ros2_ws/src/dog_voice_agent/: README.md  package.xml  setup.cfg  setup.py
ledog_ros2_ws/src/dog_voice_agent/dog_voice_agent/: voice_agent_bridge.py
ledog_ros2_ws/src/dog_voice_agent/launch/: voice_agent_bridge.launch.py  voice_agent_system.launch.py
ledog_ros2_ws/src/dog_voice_agent/scripts/: livekit_voice_agent.py  main.py  requirements.txt  run_main.sh  run_voice_agent_original.sh
ledog_ros2_ws/src/dog_voice_agent/scripts/agents/: __init__.py  dog_companion_agent.py
ledog_ros2_ws/src/dog_voice_agent/scripts/config/: __init__.py  instructions.py  settings.py
ledog_ros2_ws/src/dog_voice_agent/scripts/state/: state_manager.py
ledog_ros2_ws/src/dog_voice_agent/scripts/tools/: __init__.py  dog_tools.py
ledog_ros2_ws/src/dog_voice_agent/scripts/utils/: __init__.py  animation_data.py  announcement_data.py  greeting_data.py
ledog_ros2_ws/src/go2_interfaces/: CMakeLists.txt
ledog_ros2_ws/src/go2_robot_ui/: README.md  package.xml  setup.cfg  setup.py
ledog_ros2_ws/src/go2_robot_ui/go2_robot_ui/: constants.py  go2_ui_node.py
ledog_ros2_ws/src/go2_robot_ui/go2_robot_ui/ros_interface/: __init__.py  camera_receiver.py  robot_controller.py  status_monitor.py
ledog_ros2_ws/src/go2_robot_ui/go2_robot_ui/widgets/: __init__.py  camera_display.py  command_panel.py  status_panel.py
ledog_ros2_ws/src/go2_robot_ui/launch/: go2_full_system.launch.py  go2_robot_ui.launch.py
ledog_ros2_ws/src/ledog_policy_controller/: INSTALLATION_COMPLETE.md  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  package.xml  setup.cfg  setup.py  test_services.sh
ledog_ros2_ws/src/ledog_web_control/: README.md  package.xml  setup.cfg  setup.py
ledog_ros2_ws/src/lekiwi_base/: package.xml  setup.cfg
ledog_ros2_ws/src/lekiwi_bringup/: setup.cfg
ledog_ros2_ws/src/lekiwi_description/: package.xml
ledog_ros2_ws/src/lekiwi_teleop/: setup.cfg  setup.py
lekiwi_ros2_ws/: .gitignore  README.md
lekiwi_ros2_ws/src/lekiwi_base/: setup.py
motor_debugging/: QUICKSTART.md  README.md  requirements.txt  setup.sh
motor_debugging/config/: lekiwi_config.yaml
motor_debugging/ros2_examples/: README.md  motor_controller_node.py  motor_feedback_node.py
motor_debugging/scripts/: 01_find_port.py  02_configure_motors.py  03_test_single_motor.py  04_test_all_motors.py  05_basic_teleop.py  06_motor_diagnostics.py  README.md  motor_interface.py
(+25 files in other folders)
